# crud_rust

./: .gitignore  Cargo.toml
src/: db_service.rs  main.rs  model.rs  routes.rs
