[package]
name = "crud_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = {version = "1.40.0", features = ["full"]}

firestore = "0.43.0"
serde = {version = "1.0.200", features = ["derive"]}
fake = "2.9.2"
uuid = {version = "1.8.0", features = ["v4"]}
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.5"  # or any latest version